--- a/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.csproj
+++ b/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Assets\Scripts\EnemyScript.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\MovingScript.cs" />
+    <Compile Include="Assets\Scripts\ParticleSortLayerScript.cs" />
+    <Compile Include="Assets\Scripts\PlayerParticles.cs" />
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
   </ItemGroup>
   <ItemGroup>
