--- a/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.csproj
+++ b/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\DestroyScript.cs" />
     <Compile Include="Assets\Scripts\EnemyScript.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
+    <Compile Include="Assets\Scripts\ExceptionHandler.cs" />
     <Compile Include="Assets\Scripts\ExitScript.cs" />
     <Compile Include="Assets\Scripts\GameManagerScript.cs" />
     <Compile Include="Assets\Scripts\MenuButtonScript.cs" />
@@ -86,6 +87,7 @@
   <ItemGroup>
     <None Include="Assets\codeandweb.com\Readme.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
+    <None Include="Assets\unityexceptions.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
