--- a/Bloob-bloob/Assembly-CSharp-Editor-vs.csproj
+++ b/Bloob-bloob/Assembly-CSharp-Editor-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\codeandweb.com\Editor\TexturePackerImporter.cs" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\NewComputeShader.compute" />
+     <None Include="Assets\unityexceptions.txt" />
      <None Include="Assets\codeandweb.com\Readme.txt" />
  <Reference Include="Assembly-UnityScript-Editor-firstpass">
  <HintPath>D:/work/github/Bloob-bloob/Bloob-bloob/Library/ScriptAssemblies/Assembly-UnityScript-Editor-firstpass.dll</HintPath>
