--- a/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.Plugins.csproj
+++ b/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.Plugins.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <None Include="Assets\codeandweb.com\Readme.txt" />
     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
+    <None Include="Assets\unityexceptions.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
