--- a/Bloob-bloob/Assembly-CSharp-vs.csproj
+++ b/Bloob-bloob/Assembly-CSharp-vs.csproj
@@ -80,6 +80,7 @@
      <Compile Include="Assets\Scripts\GameManagerScript.cs" />
      <Compile Include="Assets\Scripts\MenuButtonScript.cs" />
      <Compile Include="Assets\Scripts\MovingScript.cs" />
+     <Compile Include="Assets\Scripts\MusicControl.cs" />
      <Compile Include="Assets\Scripts\ParticleSortLayerScript.cs" />
      <Compile Include="Assets\Scripts\ParticlesAutoDestroy.cs" />
      <Compile Include="Assets\Scripts\PiranhaScript.cs" />
@@ -88,6 +89,7 @@
      <Compile Include="Assets\Scripts\ScoreScript.cs" />
      <Compile Include="Assets\Scripts\ScreenRelativePosition.cs" />
      <Compile Include="Assets\Scripts\SendScreenAnalytics.cs" />
+     <Compile Include="Assets\Scripts\SoundControl.cs" />
      <Compile Include="Assets\Scripts\StartScript.cs" />
      <None Include="Assets\Plugins\Android\google-play-services_lib\res\values-pt\common_strings.xml" />
      <None Include="Assets\Plugins\Android\unityads\proguard-project.txt" />
