--- a/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.csproj
+++ b/Bloob-bloob/UnityVS.Bloob-bloob.CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Scripts\GameManagerScript.cs" />
     <Compile Include="Assets\Scripts\MenuButtonScript.cs" />
     <Compile Include="Assets\Scripts\MovingScript.cs" />
+    <Compile Include="Assets\Scripts\MusicControl.cs" />
     <Compile Include="Assets\Scripts\ParticleSortLayerScript.cs" />
     <Compile Include="Assets\Scripts\ParticlesAutoDestroy.cs" />
     <Compile Include="Assets\Scripts\PiranhaScript.cs" />
@@ -102,6 +103,7 @@
     <Compile Include="Assets\Scripts\ScoreScript.cs" />
     <Compile Include="Assets\Scripts\ScreenRelativePosition.cs" />
     <Compile Include="Assets\Scripts\SendScreenAnalytics.cs" />
+    <Compile Include="Assets\Scripts\SoundControl.cs" />
     <Compile Include="Assets\Scripts\StartScript.cs" />
   </ItemGroup>
   <ItemGroup>
